--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -93,8 +93,8 @@
           <table class="full-width">
             <tr>
               <td>Adresse : {{quotation.responsable.address}} {{quotation.responsable.postalCode}}
-                {{quotation.responsable.city.label}}
-                {{quotation.responsable.country.label}}</td>
+                {{quotation.responsable.city?quotation.responsable.city.label:""}}
+                {{quotation.responsable.country?quotation.responsable.country.label:""}}</td>
             </tr>
           </table>
           <table class="full-width">
