--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -95,6 +95,22 @@
             {{getPriceTotal()|number}} €
           </td>
         </tr>
+        <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && quotation.deposits">
+          <ng-container *ngFor="let deposit of quotation.deposits">
+            <tr>
+              <td>
+                Accompte n°{{deposit.id}}
+              </td>
+              <td class="td-price">
+                {{deposit.depositAmount|number}} €
+              </td>
+            </tr>
+          </ng-container>
+          <tr>
+            <td>Reste à payer</td>
+            <td class="td-price">{{getRemainingToPay()}} €</td>
+          </tr>
+        </ng-container>
       </table>
     </ng-container>
   </mat-sidenav>
