--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-confrere/autocomplete-confrere.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-confrere/autocomplete-confrere.component.html
@@ -1,6 +1,7 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
-  <input type="text" matInput [formControlName]="propertyName" [matAutocomplete]="matAutocomplete" [(ngModel)]="model">
+  <input matInput [placeholder]="label" [formControlName]="propertyName" [matAutocomplete]="matAutocomplete"
+    autocomplete="do-not-autofill" [required]="isMandatory">
   <button *ngIf="model==undefined || model==null || model.id ==undefined || model.id==null" matSuffix mat-icon-button
     (click)="openConfrereDialog()">
     <mat-icon>search</mat-icon>
