rework of forms validation

--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -168,7 +168,7 @@
             <td>
               <chips-mail [(model)]="tiers.mails" [form]="principalForm" label="Mails" propertyName="mails"
                 [isDisabled]="!editMode">
-              </chips-mail>{{tiers.mails?tiers.mails[0].mail:""}}
+              </chips-mail>
             </td>
             <td>
               <chips-phone [(model)]="tiers.phones" [form]="principalForm" propertyName="phones" label="Téléphones"
