--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-legal-form/autocomplete-legal-form.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-legal-form/autocomplete-legal-form.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
-  <input type="text" matInput [formControlName]="propertyName" [matAutocomplete]="matAutocomplete" [(ngModel)]="model">
+  <input type="text" matInput [formControlName]="propertyName" [matAutocomplete]="matAutocomplete">
   <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
     close
   </mat-icon>
