--- a/client/src/app/modules/miscellaneous/components/forms/select-notice-family/select-notice-family.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/select-notice-family/select-notice-family.component.html
@@ -1,8 +1,7 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
   <mat-select [formControlName]="propertyName"
-    [required]="isMandatory && (conditionnalRequired==undefined || conditionnalRequired)" [(ngModel)]="model"
-    [compareWith]="compareWithId">
+    [required]="isMandatory && (conditionnalRequired==undefined || conditionnalRequired)" [compareWith]="compareWithId">
     <mat-option *ngFor="let type of types" [value]="type">
       {{displayLabel(type)}}
     </mat-option>
