Add notification component

--- a/client/src/app/routing/search/search.component.html
+++ b/client/src/app/routing/search/search.component.html
@@ -32,6 +32,7 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">group</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
@@ -49,7 +50,9 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">group</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
+
                 </mat-dialog-content>
               </mat-tab>
               <mat-tab [label]="getTabLabel(QUOTATION_ENTITY_TYPE)">
@@ -70,6 +73,7 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">request_quote</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
@@ -91,6 +95,7 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">request_quote</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
@@ -104,6 +109,7 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">point_of_sale</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
@@ -126,6 +132,7 @@
                       </mat-card-subtitle>
                       <mat-icon class="mat-card-icon">work</mat-icon>
                     </mat-card-title-group>
+                    <mat-divider></mat-divider>
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
